# building-damage-assessment

./: .gitattributes  .gitignore  .gitmodules  .pdm-python  README.md  TODOSY.md  TODOsy.md  class_weight_cache.json  foo.ipynb  main.py  model.ipynb  pyproject.toml  rerun_split_msl_n_epochs.sh  run_msl_finetune_rescuenet.sh  run_split_experiment_adapt_msl.sh  run_split_experiment_flood.sh  run_split_experiment_wildfire.sh  run_split_experiment_wind.sh  run_split_missing.sh  run_train_rescuenet.sh  test.py
.github/workflows/: gitlab_sync.yml
config/: common.yaml  test.yaml
config/datamodule/: datamodule.yaml  default.yaml  floods_val_15_512_aug.yaml  original_split.yaml  original_split_512_aug.yaml  original_split_aug.yaml  rescuenet.yaml  tier1_tier3_val_15_512_aug.yaml  tier1_tier_3_512_aug.yaml  val_on_fires.yaml  val_on_hurricanes.yaml  val_on_hurricanes_aug_manual_weights.yaml  val_on_hurricanes_fullres.yaml  val_on_hurricanes_fullres_aug.yaml  val_on_volcanoes.yaml
config/datamodule/event_split/flood/: test_base.yaml  test_hurricane_florence.yaml  test_hurricane_harvey.yaml  test_hurricane_michael.yaml  test_midwest_flooding.yaml  test_nepal_flooding.yaml
config/datamodule/event_split/hurricanes/: val_florence.yaml  val_harvey.yaml  val_matthew.yaml  val_michael.yaml
config/datamodule/event_split/wildfire/: test_base.yaml  test_pinery_bushfire.yaml  test_portugal_wildfire.yaml  test_santa_rosa_wildfire.yaml  test_socal_fire.yaml  test_woolsey_fire.yaml
config/datamodule/event_split/wind/: test_base.yaml  test_hurricane_matthew.yaml  test_hurricane_michael.yaml  test_joplin_tornado.yaml  test_moore_tornado.yaml  test_tuscaloosa_tornado.yaml
config/module/: default.yaml  manual_weights.yaml  module.yaml  noweights.yaml
config/module/baseline/: baseline_manual_weights.yaml  baseline_noweights.yaml  baseline_singlebranch.yaml
config/module/dahitra/: dahitra.yaml
config/module/farseg/: farseg_default_weights.yaml  farseg_singlebranch_default_weights.yaml
config/trainer/: default.yaml  trainer.yaml
inz/: util.py
inz/data/: data_module.py  data_module_floodnet.py  data_module_frnet.py  event.py  transform.py  zipped_data_module.py
inz/models/: base_pl_module.py  baseline_module.py  baseline_singlebranch.py  bdanet_simplified.py  dahitra_module.py  farseg_module.py  farseg_singlebranch_module.py  unet_basic.py  unet_basic_pl.py  unet_siamese.py  unet_siamese_pl.py  util.py
inz/models/msl/: msl_loss.py  msl_module_wrapper.py
inz/models/old/: unet_basic_pl.py  unet_siamese_pl.py
inz/utils/: data_module.py
misc/: results_floodnet_initial_msl.csv  results_single_double.csv  results_split_msl.csv  results_split_msl.csv.bak  results_split_test.csv  results_split_train.csv
misc/results_raw/: results_floodnet_finetune.csv  results_split_test.csv  results_split_train.csv
notebooks/: adda_test.ipynb  baseline_singlebranch_test.ipynb  datamodule.ipynb  event_stats.ipynb  farseg_test_bak.ipynb  finetune_test.ipynb  floodnet_test.ipynb  foobar.ipynb  hiddenlayer.ipynb  infer.ipynb  msl_floodnet_test.ipynb  msl_test_floodnet_refactor.ipynb  results.ipynb  results_floodnet.ipynb  results_single_double.ipynb  results_split.ipynb  sanity_check.ipynb  siamese.ipynb  test.ipynb
notebooks/misc/: _legend.ipynb
notebooks/old/: sanity_check.ipynb  siamese.ipynb
notebooks/results_analysis/: results_floodnet.ipynb  results_split.ipynb
scripts/: _ensure_cwd.py  _test_event_split.py  adapt.py  eval.py  finetune.py  finetune_test.py  make_data.py  make_data_floodnet.py  make_data_floodnet_rescuenet.py  make_jpegs.py  make_masks.py  test_event_split.py  test_event_split_no_adapt.py  train.py  train_test_floodnet_msl.py  train_test_msl.py
src/inz/: main.py
src/inz/models/: unet_basic.py
src/inz/utils/: data_module.py
