[project]
name = "inz"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "towienko", email = "tomek.owienko@gmail.com"},
]
dependencies = [
    "pytest>=8.1.1",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "patchify>=0.2.3",
    "geotiff>=0.2.10",
    "pip>=24.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.4",
    "shapely>=2.0.4",
    "rioxarray>=0.15.5",
    "opencv-python>=4.9.0.80",
    "pytorch-lightning>=2.2.4",
    "hydra-core>=1.3.2",
    "hydra-zen>=0.13.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.4.1",
    "bpython>=0.24",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"
indent-width = 4
line-length = 120

[tool.ruff.lint]
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
